2020-09-05  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/ajbbook/ajbwindow.py: Added function
	display_entry_is_valid() to check validity of the display form
	before converting the form to an ajbentry.

	* Tools/python/aabooks/ajbbook/entrydisplay.py: Finished work on
	the dislay to entry functions.  Tested by hand successfully.

2020-09-03  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/ajbbook/entrydisplay.py: Began work on
	entry to display functions.  Moved original ones from ajbwindow.py
	into entrydisplay.py.  Tested sucessfully and began clean up
	with pylint.

	* aabooks: merge with master

	* Tools/python/aabooks/ajbbook/ajbcomments.py: Added unittest
	yesterday.  Tested with an XML file, converted to text, then read
	the text, write a second text file, and compare successfully.

2020-08-30  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/ajbbook/AJBcomments.py: Cleaned up
	with pylint and added unit tests.

	* Tools/python/aabooks/journal/jsearch.py: Corrected return
	index from search list to take into account the 1-based counting
	of entries in the new entrylist.EntryList() class.

	* Tools/python/aabooks/journal/journalwindow.py (JournalWindow):
	Adapted JournalWindow to new JournalFile format.

	* Tools/python/aabooks/journal/journalfile.py (JournalFile):
	Adapted class JournalFile to the new entrylist.EntryList()
	class.

	* Tools/python/aabooks/ajbbook/ajbwindow.py
	(BookEntry.entry_to_display): Adapted ajbwindow.py to use new
	bookfile.BookFile() and entrylist.EntryList()

	* Tools/python/aabooks/ajbbook/bookfile.py: Adapted BookFile()
	class to be a subclass of entrylist.EntryList().  Added unit tests
	and ran through pylint.

	* Tools/python/aabooks/ajbbook/entrytext.py: Found a number of
	issues with entrytext.py.  I had not tested the text functions in
	this file.  Added unit test to use write_text_from_entry().
	There is a deprecated usage in modgrammer that I need to clean