@@ -1,4 +1,16 @@
+2020-09-06  Jim Fowler  <jrf@biblion>
+
+	* Tools/python/aabooks/journal/journalwindow.py: Fix issue with
+	save file.  I had not tested the save function and had not modified
+	the calls for journalfile.filename.
+
 2020-09-05  Jim Fowler  <jrf@biblion>
+
+	* Tools/python/aabooks/journal/journalwindow.py: removed display
+	to/from entry and moved them to entrydisplay.py
+
+	* Tools/python/aabooks/journal/entrydisplay.py: created from
+	display to/from entry in journalwindow.py
 
 	* Tools/python/aabooks/ajbbook/ajbwindow.py: Added function
 	display_entry_is_valid() to check validity of the display form
